[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stage/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Art/Weapons/Sword.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 400, 400 )

[sub_resource type="Animation" id=2]

resource_name = "Bludgeon"

[sub_resource type="Animation" id=3]

resource_name = "BludgeonReturn"

[sub_resource type="Animation" id=4]

length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionBox/WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 65.0, -30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBox/WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, -40 ), Vector2( -800, 80 ) ]
}

[sub_resource type="Animation" id=5]

length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionBox/WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBox/WeaponSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -800, 80 ), Vector2( 0, 0 ) ]
}

[node name="WeaponBase" type="Area2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true
one_way_collision = true

[node name="WeaponSprite" type="Sprite" parent="CollisionBox"]
rotation = 0.785398
texture = ExtResource( 2 )

[node name="Animation" type="AnimationPlayer" parent="."]
playback_speed = 6.0
anims/Bludgeon = SubResource( 2 )
anims/BludgeonReturn = SubResource( 3 )
anims/Slash = SubResource( 4 )
anims/SlashReturn = SubResource( 5 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
